# oldArch_hw4_

./: .gitignore  Dockerfile  pyproject.toml  run_training.py
homework/: dense_transforms.py  det.th  models.py  train.py
