[tool.poetry]
name = "oldarch-hw4-"
version = "0.1.0"
description = ""
authors = ["Ian Thomas <thomasian06@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
torch = "^2.1.0"
torchvision = "^0.16.0"
tensorboard = "^2.15.0"
matplotlib = "^3.8.0"
pillow = "^10.1.0"
numpy = "^1.26.1"

nvidia-cublas-cu12 = "^12.3.2.9"
nvidia-cuda-nvrtc-cu12 = "^12.3.52"
nvidia-cudnn-cu12 = "^8.9.5.29"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
isort = "^5.12.0"
ruff = "^0.1.3"
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
